[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
regex = "1"
anyhow = "1.0.52"
colored = "2.0.0"
glob = "0.3.0"
itertools = "0.10.3"
rayon = "1.5.1"
thiserror = "1.0.30"